k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - app.student1.devops8.test-danit.com
    secretName: app-tls-cert
  rules:
  - host: app.student1.devops8.test-danit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-backend-service
            port:
              number: 80
